# qelectrotech-source-mirror

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  qelectrotech.pro
.github/workflows/: auto-doxygen.yml  windows-build.yml  windows-msi.yml
build-aux/: generate-page.py
cmake/: define_definitions.cmake  paths_compilation_installation.cmake  qet_compilation_vars.cmake
docs/architecture/: ai-mcp-qml.md
docs/audit/: backlog-roadmap.md  qet-audit.md
docs/audit/evidence/: README.md
docs/audit/implementation/: README.md  ai-01-mcp-automation-center.md  data-01-folio-duplication-integrity.md  data-03-project-database-integrity.md  dev-01-windows-clone.md  export-01-integrity.md  ind-01a-terminal-cable-overview.md  ind-01b-cable-catalog.md  ind-01c-exact-conductor-edit.md  props-01-contextual-properties.md  save-02-project-save-status.md  ui-01-essential-workspace.md  ui-02-export-center.md  ui-03-start-center.md  ui-03b-curated-examples.md  ui-04-modern-shell.md  ux-02-folio-navigation.md  ux-02b-large-project-performance.md  ux-03-collection-search.md  ux-04-conductor-selection.md  ux-05a-conductor-change-preview.md  ux-05b-conductor-bulk-editor.md  ux-05c-table-fill.md  ux-05d-column-layout.md  ux-05e-conductor-review-export.md  windows-preview-integration.md
docs/development/: windows-msys2-build.md  windows-portable-preview.md
docs/history/: README.md
docs/releases/: preview-2026-07.md
lang/: qet_en.qm  qet_en.ts
packaging/windows/: Launch-QElectroTech-Preview.bat  deploy-portable.ps1  test-portable-archive.ps1
scripts/: check-repository-contracts.ps1  test-mcp-stdio.ps1
sources/: bordertitleblock.cpp  cli_export.cpp  conductornumexport.cpp  conductorpropertiesresolver.cpp  conductorpropertiesresolver.h  configdialog.cpp  configdialog.h  createdxf.cpp  createdxf.h  diagram.cpp  diagram.h  diagramview.cpp  diagramview.h  elementspanel.cpp  elementspanelwidget.cpp  exportdialog.cpp  exportdialog.h  main.cpp  projectview.cpp  projectview.h  qet.cpp  qetapp.cpp  qetapp.h  qetdiagrameditor.cpp  qetdiagrameditor.h  qetmainwindow.cpp  qetmainwindow.h  qetproject.cpp  qetproject.h  qetresult.cpp  qetresult.h  recentfiles.cpp  recentfiles.h
sources/ElementsCollection/: elementcollectionroles.h  elementscollectionmodel.cpp  elementscollectionmodel.h  elementscollectionsearchmodel.cpp  elementscollectionsearchmodel.h  elementscollectionwidget.cpp  elementscollectionwidget.h  elementslocation.cpp  elementstreeview.cpp
sources/PropertiesEditor/: propertieseditordockwidget.cpp  propertieseditordockwidget.h  propertieseditordockwidget.ui
sources/SearchAndReplace/: advancedreplacestruct.h  conductorbulkeditadapter.cpp  conductorbulkeditadapter.h  conductorbulkeditcsvexport.cpp  conductorbulkeditcsvexport.h  conductorbulkeditmodel.cpp  conductorbulkeditmodel.h  conductorchangeexecution.cpp  conductorchangeplan.cpp  conductorchangeplan.h  conductorchangepreviewdata.h  conductorpropertydiff.cpp  conductorpropertydiff.h  conductorpropertytransform.cpp  conductorpropertytransform.h  conductorscopeutils.h  searchandreplaceworker.cpp  searchandreplaceworker.h
sources/SearchAndReplace/ui/: conductorbulkeditdialog.cpp  conductorbulkeditdialog.h  conductorchangepreviewdialog.cpp  conductorchangepreviewdialog.h  searchandreplacewidget.cpp  searchandreplacewidget.h  searchandreplacewidget.ui
sources/TerminalStrip/: realterminal.cpp
sources/TerminalStrip/ui/: cablecatalogmodel.cpp  (+13 more)
sources/ai/: qetmcpmetadata.cpp  qetmcpmetadata.h  qetmcpprojectservice.cpp  qetmcpprojectservice.h  qetmcpserver.cpp  qetmcpserver.h
sources/autoNum/: assignvariables.cpp  assignvariables.h
sources/cablecatalog/: cablecatalogbuilder.cpp  cablecatalogbuilder.h  cablecatalogcsvexporter.cpp  cablecatalogcsvexporter.h  cablecatalogloader.cpp  cablecatalogloader.h  cablecatalogtypes.cpp  cablecatalogtypes.h
sources/dataBase/: projectdatabase.cpp  projectdatabase.h  projectdatabasewriter.cpp  projectdatabasewriter.h
sources/factory/: propertieseditorfactory.cpp
sources/print/: projectprintwindow.cpp  projectprintwindow.h
sources/qetgraphicsitem/: conductor.cpp  conductor.h
sources/ui/: aboutqetdialog.cpp  aboutqetdialog.h  applicationtheme.cpp  applicationtheme.h  bomexportdialog.cpp  bomexportdialog.h  conductorpropertieseditor.cpp  conductorpropertieseditor.h  diagrampropertieseditordockwidget.cpp  diagrampropertieseditordockwidget.h  exportcenterdialog.cpp  exportcenterdialog.h  folionavigatordialog.cpp  folionavigatordialog.h  folionavigatormodel.cpp  folionavigatormodel.h  onboardingdialog.cpp  onboardingdialog.h  projectsavestatuscontroller.cpp  projectsavestatuscontroller.h  projectsavestatuswidget.cpp  projectsavestatuswidget.h  startcenterpagecontroller.cpp  startcenterpagecontroller.h  startcentertemplatecatalog.cpp  startcentertemplatecatalog.h  startcenterwidget.cpp  startcenterwidget.h  titleblockpropertieswidget.cpp  titleblockpropertieswidget.h  workspaceprofilecontroller.cpp  workspaceprofilecontroller.h
sources/undocommand/: changeconductorspropertiescommand.cpp  changeconductorspropertiescommand.h  duplicatediagramscommand.cpp  duplicatediagramscommand.h
sources/utils/: conductorinteraction.cpp  conductorinteraction.h  diagramduplicateuuidremapper.h  exportutils.cpp  exportutils.h  folionavigationindex.cpp  folionavigationindex.h  orderedindexcache.h  titleblockcontextresolver.h
tests/catch/: CMakeLists.txt
tests/qml/: tst_AutomationCenter.qml
tests/qttest/: CMakeLists.txt  tst_applicationtheme.cpp  tst_automationcenterqml.cpp  tst_cablecatalog.cpp  tst_conductorbulkedit.cpp  tst_conductorchangepreview.cpp  tst_conductorinteraction.cpp  tst_configdialogux.cpp  tst_diagramduplicateuuidremapper.cpp  tst_elementscollectionsearchmodel.cpp  tst_exportcenterdialog.cpp  tst_exportutils.cpp  tst_folionavigator.cpp  tst_onboardingdialog.cpp  tst_orderedindexcache.cpp  tst_projectdatabasewriter.cpp  tst_projectsavestatus.cpp  tst_propertieseditordockwidget.cpp  tst_startcenter.cpp  tst_terminalstripoverview.cpp  tst_workspaceprofilecontroller.cpp
(+26 files in other folders)
